--- a/index.html
+++ b/index.html
@@ -502,14 +502,14 @@
                 <div class="col-md-4">
                     <label for="validationCustom01" class="form-label">First name</label>
                     <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-                    <div class="valid-tooltip">
+                    <div class="valid-feedback">
                         Looks good!
                     </div>
                 </div>
                 <div class="col-md-4">
                     <label for="validationCustom02" class="form-label">Last name</label>
                     <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-                    <div class="valid-tooltip">
+                    <div class="valid-feedback">
                         Looks good!
                     </div>
                 </div>
@@ -518,7 +518,7 @@
                     <div class="input-group">
                         <span class="input-group-text" id="inputGroupPrepend">@</span>
                         <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-                        <div class="invalid-tooltip">
+                        <div class="invalid-feedback">
                             Please choose a username.
                         </div>
                     </div>
@@ -526,7 +526,7 @@
                 <div class="col-md-6">
                     <label for="validationCustom03" class="form-label">City</label>
                     <input type="text" class="form-control" id="validationCustom03" required>
-                    <div class="invalid-tooltip">
+                    <div class="invalid-feedback">
                         Please provide a valid city.
                     </div>
                 </div>
@@ -536,14 +536,14 @@
                         <option selected="" disabled="" value="">Choose...</option>
                         <option>...</option>
                     </select>
-                    <div class="invalid-tooltip">
+                    <div class="invalid-feedback">
                         Please select a valid state.
                     </div>
                 </div>
                 <div class="col-md-3">
                     <label for="validationCustom05" class="form-label">Zip</label>
                     <input type="text" class="form-control" id="validationCustom05" required>
-                    <div class="invalid-tooltip">
+                    <div class="invalid-feedback">
                         Please provide a valid zip.
                     </div>
                 </div>
@@ -553,7 +553,7 @@
                         <label class="form-check-label" for="invalidCheck">
                             Agree to terms and conditions
                         </label>
-                        <div class="invalid-tooltip">
+                        <div class="invalid-feedback">
                             You must agree before submitting.
                         </div>
                     </div>
