Refactor/bug fixes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <div class="form-group">
                 <label class="form-label">Some Label</label>
-                <select type="text"class="form-control">
+                <select type="text" class="form-select">
                     <option>Option A</option>
                     <option selected>Option B</option>
                     <option>Option C</option>
@@ -72,7 +72,7 @@
 
             <div class="form-group">
                 <label class="form-label">Disabled</label>
-                <select type="text"class="form-control" disabled>
+                <select type="text" class="form-select" disabled>
                     <option>Option A</option>
                     <option selected>Option B</option>
                     <option>Option C</option>
@@ -81,7 +81,7 @@
 
             <div class="form-group">
                 <label class="form-label">Readonly</label>
-                <select type="text"class="form-control" readonly>
+                <select type="text" class="form-select" readonly>
                     <option disabled>Option A</option>
                     <option selected>Option B</option>
                     <option disabled>Option C</option>
@@ -90,7 +90,7 @@
 
             <div class="form-group">
                 <label class="form-label">Plaintext</label>
-                <select type="text"class="form-control form-control-plaintext" disabled readonly>
+                <select type="text" class="form-control form-control-plaintext" disabled readonly>
                     <option disabled>Option A</option>
                     <option disabled selected>Option B</option>
                     <option disabled>Option C</option>
@@ -101,7 +101,7 @@
 
             <div class="form-group">
                 <label class="form-label">Small</label>
-                <select type="text"class="form-control form-control-sm">
+                <select type="text" class="form-select form-select-sm">
                     <option>Option A</option>
                     <option selected>Option B</option>
                     <option>Option C</option>
@@ -110,7 +110,7 @@
 
             <div class="form-group">
                 <label class="form-label">Medium</label>
-                <select type="text"class="form-control form-control">
+                <select type="text" class="form-select form-select">
                     <option>Option A</option>
                     <option selected>Option B</option>
                     <option>Option C</option>
@@ -119,7 +119,7 @@
 
             <div class="form-group">
                 <label class="form-label">Large</label>
-                <select type="text"class="form-control form-control-lg">
+                <select type="text" class="form-select form-select-lg">
                     <option>Option A</option>
                     <option selected>Option B</option>
                     <option>Option C</option>
