--- a/index.html
+++ b/index.html
@@ -579,6 +579,9 @@
         <script type="module">
             import './index.css';
             import Vue from 'vue/dist/vue';
+            
+            Vue.config.devtools = false;
+            Vue.config.productionTip = false;
 
             const vue = new Vue({
                 el: '#app'
