Updates for mono repo

--- a/index.html
+++ b/index.html
@@ -392,6 +392,10 @@
             import './index.css';
             import { createApp } from 'vue';
 
+            import { FormControl } from './index';
+
+            console.log(FormControl);
+
             const vue = createApp({
                 el: '#app'
             });
