--- a/index.html
+++ b/index.html
@@ -95,16 +95,18 @@
                             <label class="flex-shrink-0">Invalid Field</label>
                             <div>
                                 <input type="text" class="form-control is-invalid" value="This field is invalid" />
+                                <div class="invalid-feedback">This is an inline error.</div>
                             </div>
-                            <div class="feedback-invalid">This is an inline error.</div>
+                            <div class="invalid-feedback">This is an inline error.</div>
                         </div>
 
                         <div>
                             <label class="flex-shrink-0">Valid Field</label>
                             <div>
                                 <input type="text" class="form-control is-valid" value="This field is invalid" />
+                                <div class="valid-feedback">This is an inline success message.</div>
                             </div>
-                            <div class="feedback-valid">This is an inline success message.</div>
+                            <div class="valid-feedback">This is an inline success message.</div>
                         </div>
                     </div>
 
@@ -215,8 +217,9 @@
                                     <option selected>Option B</option>
                                     <option>Option C</option>
                                 </select>
+                                <div class="invalid-feedback">This is an inline error.</div>
                             </div>
-                            <div class="feedback-invalid">This is an inline error.</div>
+                            <div class="invalid-feedback">This is an inline error.</div>
                         </div>
 
                         <div>
@@ -227,8 +230,9 @@
                                     <option selected>Option B</option>
                                     <option>Option C</option>
                                 </select>
+                                <div class="valid-feedback">This is an inline success message.</div>
                             </div>
-                            <div class="feedback-valid">This is an inline success message.</div>
+                            <div class="valid-feedback">This is an inline success message.</div>
                         </div>
                     </div>
 
@@ -259,8 +263,9 @@
                                 <label class="flex gap-2"><input type="checkbox" class="form-check" checked invalid> Invalid</label>
                                 <label class="flex gap-2"><input type="radio" name="radio7" class="form-check" invalid> Invalid</label>
                                 <label class="flex gap-2"><input type="radio" name="radio7" class="form-check" checked invalid> Invalid</label>
+                                <div class="invalid-feedback">This is an inline error.</div>
                             </div>
-                            <div class="feedback-invalid">This is an inline error.</div>
+                            <div class="invalid-feedback">This is an inline error.</div>
                         </div>
 
                         <div>
@@ -269,8 +274,9 @@
                                 <label class="flex gap-2"><input type="checkbox" class="form-check" checked valid> Valid</label>
                                 <label class="flex gap-2"><input type="radio" name="radio8" class="form-check" valid> Valid</label>
                                 <label class="flex gap-2"><input type="radio" name="radio8" class="form-check" checked valid> Valid</label>
+                                <div class="valid-feedback">This is an inline sucess message.</div>
                             </div>
-                            <div class="feedback-valid">This is an inline sucess message.</div>
+                            <div class="valid-feedback">This is an inline sucess message.</div>
                         </div>
                     </div>
 
