fix: more issues with input-field integration

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                                 <div class="invalid-feedback">This is an inline error.</div>
                             </div>
                             <div class="invalid-feedback">This is an inline error.</div>
+                            <div>
+                                <div class="invalid-feedback">This is an inline error.</div>
+                            </div>
                         </div>
 
                         <div>
@@ -107,6 +110,9 @@
                                 <div class="valid-feedback">This is an inline success message.</div>
                             </div>
                             <div class="valid-feedback">This is an inline success message.</div>
+                            <div>
+                                <div class="valid-feedback">This is an inline success message.</div>
+                            </div>
                         </div>
                     </div>
 
@@ -220,6 +226,9 @@
                                 <div class="invalid-feedback">This is an inline error.</div>
                             </div>
                             <div class="invalid-feedback">This is an inline error.</div>
+                            <div>
+                                <div class="invalid-feedback">This is an inline error.</div>
+                            </div>
                         </div>
 
                         <div>
@@ -233,6 +242,9 @@
                                 <div class="valid-feedback">This is an inline success message.</div>
                             </div>
                             <div class="valid-feedback">This is an inline success message.</div>
+                            <div>
+                                <div class="valid-feedback">This is an inline success message.</div>
+                            </div>
                         </div>
                     </div>
 
@@ -266,6 +278,9 @@
                                 <div class="invalid-feedback">This is an inline error.</div>
                             </div>
                             <div class="invalid-feedback">This is an inline error.</div>
+                            <div>
+                                <div class="invalid-feedback">This is an inline error.</div>
+                            </div>
                         </div>
 
                         <div>
@@ -277,6 +292,9 @@
                                 <div class="valid-feedback">This is an inline sucess message.</div>
                             </div>
                             <div class="valid-feedback">This is an inline sucess message.</div>
+                            <div>
+                                <div class="valid-feedback">This is an inline success message.</div>
+                            </div>
                         </div>
                     </div>
 
@@ -335,12 +353,12 @@
 
                         <div class="flex flex-col gap-2">
                             <div class="form-switch">
-                                <input type="checkbox" class="form-check-input" id="defaultSwitch" checked>
-                                <label class="form-check-label" for="defaultSwitch">
+                                <input type="checkbox" class="form-check-input" id="defaultSwitch1" checked>
+                                <label class="form-check-label" for="defaultSwitch1">
                                     On
                                 </label>
                             </div>
-
+                            
                             <div class="form-switch">
                                 <input type="checkbox" class="form-check-input" id="defaultSwitch2">
                                 <label class="form-check-label" for="defaultSwitch2">
